--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
     "name": "adonalsium",
     "version": "2.0.1",
     "description": "",
-    "main": "dist/index.js",
+    "main": "dist/main.js",
     "scripts": {
         "clean": "del /s /q dist",
-        "dev": "tsx watch src/index.ts",
+        "dev": "tsx watch src/main.ts",
         "build": "tsc --build",
-        "start": "npm run clean && npm run build && node dist/index.js",
-        "start:dev": "npm run clean && npm run build && node dist/index.js --dev"
+        "start": "npm run clean && npm run build && node dist/main.js",
+        "start:dev": "npm run clean && npm run build && node dist/main.js --dev"
     },
     "keywords": [],
     "author": "Xardax",
