--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "keywords": [],
     "author": "Xardax",
-    "license": "ISC",
+    "license": "GPL-3.0-only",
     "devDependencies": {
         "@types/node": "^20.12.2",
         "@typescript-eslint/eslint-plugin": "^7.4.0",
@@ -21,9 +21,11 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
         "tsx": "^4.7.1",
-        "typescript": "^5.4.3"
+        "typescript": "^5.4.4"
     },
     "dependencies": {
+        "@napi-rs/canvas": "^0.1.51",
+        "discord-arts": "^0.5.8",
         "discord.js": "^14.12.1",
         "dotenv": "^16.4.5",
         "glob": "^10.3.12",
