--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "@napi-rs/canvas": "^0.1.51",
+        "axios": "^1.6.8",
         "discord-arts": "^0.5.8",
         "discord.js": "^14.12.1",
         "dotenv": "^16.4.5",
