--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "author": "Xardax",
     "license": "GPL-3.0-only",
     "devDependencies": {
+        "@types/cron": "^2.4.0",
         "@types/node": "^20.12.2",
         "@typescript-eslint/eslint-plugin": "^7.4.0",
         "@typescript-eslint/parser": "^7.4.0",
@@ -28,6 +29,7 @@
         "@google/generative-ai": "^0.7.1",
         "@napi-rs/canvas": "^0.1.51",
         "axios": "^1.6.8",
+        "cron": "^3.1.7",
         "discord-arts": "^0.5.8",
         "discord.js": "^14.12.1",
         "dotenv": "^16.4.5",
