--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "typescript": "^5.4.4"
     },
     "dependencies": {
+        "@discordjs/voice": "^0.17.0",
+        "@distube/ytdl-core": "^4.13.5",
         "@google/generative-ai": "^0.7.1",
         "@napi-rs/canvas": "^0.1.51",
         "axios": "^1.6.8",
@@ -33,7 +35,10 @@
         "discord-arts": "^0.5.8",
         "discord.js": "^14.12.1",
         "dotenv": "^16.4.5",
+        "ffmpeg": "^0.0.4",
+        "ffmpeg-static": "^5.2.0",
         "glob": "^10.3.12",
+        "libsodium-wrappers": "^0.7.14",
         "mongoose": "^8.2.4",
         "puppeteer": "^22.6.5"
     }
